--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,40 @@ a {
     background: rgba(0,0,0, .5);
     border-radius: 50px;
     cursor: pointer;
+}
 
+/* FAVORITES STYLES */
+
+.favorites-list {
+    list-style: none;
+    cursor: pointer;
+    padding: 10px 0;
+    min-width: 250px;
+}
+.favorites-list li {
+    border-top:1px solid white;
+    padding: 15px 0;
+    text-align: left;
+}
+.favorites-list li:hover {
+    background: #5f5f5f;
+}
+
+/* FAVORITES STYLES */
+
+.filter-list {
+    list-style: none;
+    cursor: pointer;
+    padding: 10px 0;
+    min-width: 250px;
+}
+.filter-list li {
+    border-top:1px solid white;
+    padding: 15px 0;
+    text-align: left;
+}
+.filter-list li:hover {
+    background: #5f5f5f;
 }
 
 
@@ -104,6 +137,7 @@ a {
     font-size: 1.2rem;
     line-height: 1.3;
     margin: 0 auto 40px;
+
     max-width: 350px;
     padding: 15px;
     position: fixed;
