--- a/css/styles.css
+++ b/css/styles.css
@@ -91,24 +91,24 @@ a {
     cursor: pointer;
 }
 
-/* FAVORITES STYLES */
+/* locations STYLES */
 
-.favorites-list {
+.locations-list {
     list-style: none;
     cursor: pointer;
     padding: 10px 0;
     min-width: 250px;
 }
-.favorites-list li {
+.locations-list li {
     border-top:1px solid white;
     padding: 15px 0;
     text-align: left;
 }
-.favorites-list li:hover {
+.locations-list li:hover {
     background: #5f5f5f;
 }
 
-/* FAVORITES STYLES */
+/* locations STYLES */
 
 .filter-list {
     list-style: none;
@@ -154,7 +154,7 @@ a {
     right: 220px;
 }
 
-#favoriteBubble {
+#locationBubble {
     top: 70px;
     right: 15px;
 }
