--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,8 @@ a {
     cursor: pointer;
     padding: 10px 0;
     min-width: 250px;
+    height: 400px;
+    overflow-y: scroll;
 }
 .filter-list li {
     border-top:1px solid white;
