--- a/css/styles.css
+++ b/css/styles.css
@@ -183,19 +183,41 @@ a {
 
 
 .info-window {
-
+    max-width: 350px;
 }
 .info-window-img {
-    height: 200px;
-    width: 100%;
+    height: 400px;
+    width: 200px;
     min-width: 350px;
     border-radius: 5px;
     background-size: cover;
-    background: initial no-repeat center center fixed
+    background: initial no-repeat center fixed
 }
+
 .info-window-name {
     font-family: var(--roboto-mono);
 }
+
 .info-window-p {
     font-size: 1.5rem;
 }
+
+.error-msg {
+    position: absolute;
+    width: 70%;
+    background: whitesmoke;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: ;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    z-index: 1000;
+
+}
+.error-msg span {
+    font-size: 2rem;
+    color: var(--red);
+}
+
