--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ a {
 
 .navbar {
     height: 60px;
-    width: 90%;
+    width: 80%;
     padding: 0 30px;
 
     display: flex;
@@ -142,7 +142,7 @@ a {
     line-height: 1.3;
     margin: 0 auto 40px;
 
-    max-width: 350px;
+    width: 350px;
     padding: 15px;
     position: fixed;
     visibility: hidden;
@@ -270,6 +270,9 @@ a {
 
 
 @media only screen and (max-width: 800px) {
+    .navbar h1 {
+        font-size: 1rem;
+    }
     .nav-link-name{
         display: none;
     }
@@ -278,12 +281,17 @@ a {
     }
     #aboutBubble {
         top: 70px;
-        right: 15px;
+        right: 0px;
+    }
+
+    #locationBubble {
+        top: 70px;
+        right: 0px;
     }
 
     #filterBubble {
         top: 70px;
-        right: 15px;
+        right: 0px;
     }
     .speech-bubble::after {
         border-right: none;
@@ -291,11 +299,18 @@ a {
     }
 }
 @media only screen and (max-width: 400px) {
-    .navbar h1 {
-        font-size: .8rem;
-    }
+
     .svg {
         height: 16px;
+        margin: 0;
     }
 
+}
+
+.visible {
+    visibility: visible;
+}
+
+.hidden {
+    visibility: hidden;
 }
