--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,6 @@ a {
     line-height: 1.3;
     margin: 0 auto 40px;
 
-    width: 350px;
     padding: 15px;
     position: fixed;
     visibility: hidden;
@@ -183,12 +182,11 @@ a {
 
 
 .info-window {
-    max-width: 350px;
+
 }
 .info-window-img {
-    height: 400px;
-    width: 200px;
-    min-width: 350px;
+    height: 100px;
+    width: 100%;
     border-radius: 5px;
     background-size: cover;
     background: initial no-repeat center fixed
@@ -293,6 +291,11 @@ a {
         top: 70px;
         right: 0px;
     }
+
+    .speech-bubble {
+        width: 90%;
+    }
+
     .speech-bubble::after {
         border-right: none;
         border-bottom: none;
